   example usage: Spring.SetSunLighting({
    groundAmbientColor = {1, 0.1, 1},
    groundDiffuseColor = {1, 0.1, 1},
   })
 - add unsynced callout Spring.SetAtmosphere(table params) -> nil
   It can be used to modify the following atmosphere parameters:
   fog{Start,End}, {sun,sky,cloud}Color
   example usage: Spring.SetAtmosphere({
     fogStart = 0,
	 fogEnd   = 0.5,
	 fogColor = { 0.7, 0.2, 0.2, 1 },
   })

 - add unsynced callout Spring.SetMapShadingTexture(string texType, string texName) -> boolean
   example usage: Spring.SetMapShadingTexture("$ssmf_specular", "name_of_my_shiny_texture")

 - add unsynced callout Spring.SetMapShader(
     number standardShaderID,
     number deferredShaderID
   ) -> nil
   (the ID's must refer to valid programs returned by gl.CreateShader;
   passing in a value of 0 will cause the respective shader to revert
   back to its engine default)
   custom map shaders that declare a uniform ivec2 named "texSquare"
   can sample from the default diffuse texture(s), which are always
   bound to TU 0

 - add new callins DrawGroundPreForward and DrawGroundPreDeferred
   these run at the start of their respective passes when a custom
   map shader has been assigned via Spring.SetMapShader (convenient
   for setting uniforms)

 - add new callin DrawGroundPostDeferred; this runs at the end of its
   respective deferred pass and allows proper frame compositing (with
   ground flashes/decals/foliage/etc, which are drawn between it and
   DrawWorldPreUnit) via gl.CopyToTexture

 - add new callins DrawUnitsPostDeferred and DrawFeaturesPostDeferred
   these run at the end of their respective deferred passes to inform
   Lua code it should make use of the $model_gbuffer_* textures before
   another pass overwrites them (and to allow proper blending with e.g.
   cloaked objects which are drawn between these events and DrawWorld
   via gl.CopyToTexture)


   NOTE: the *PostDeferred events are only sent (and only have a real