@@ -297,6 +297,7 @@ class LuaOpenGL {
 		static int GetShadowMapParams(lua_State* L);
 
 		static int GetSun(lua_State* L);
+		static int GetAtmosphere(lua_State* L);
 };
 
 inline void LuaOpenGL::InitMatrixState(lua_State* L, const LuaHashString* hs) {
